--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/vue": "latest",
     "@heroicons/vue": "^2.1.5",
     "nuxt": "^3.13.0",
+    "nuxt-gtag": "^4.1.0",
     "nuxt-swiper": "^1.2.2",
     "vue": "latest",
     "vue-router": "latest"
