--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@nuxtjs/sitemap": "^7.4.11",
     "autoprefixer": "^10.4.20",
     "install": "^0.13.0",
     "postcss": "^8.4.47",
